--- a/index.html
+++ b/index.html
@@ -14,7 +14,25 @@
 		<title>Fluorite</title>
 	</head>
 	<body>
-		<h1>Fluorite</h1>
+		<main class="app">
+			<div class="panel">
+				<img class="logo" src="/assets/images/logomark.svg" alt="Fluorite" />
+				<nav class="menu">
+					<div class="menu__list">
+						<button class="menu__item menu__item-active">
+							<img src="/assets/images/water.svg" alt="Вода" />
+						</button>
+						<button class="menu__item">
+							<img src="/assets/images/food.svg" alt="Еда" />
+						</button>
+					</div>
+					<button class="menu__add">
+						<img src="/assets/images/add.svg" alt="Добавить" />
+					</button>
+				</nav>
+			</div>
+			<div class="content"></div>
+		</main>
 		<script src="/scripts/app.js"></script>
 	</body>
 </html>
