--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		<title>Fluorite</title>
 	</head>
 	<body>
-		<main class="app">
+		<div class="app">
 			<div class="panel">
-				<img class="logo" src="/assets/images/logomark.svg" alt="Fluorite" />
+				<img class="logo" src="/assets/images/fluorite.svg" alt="Fluorite" />
 				<nav class="menu">
 					<div class="menu__list">
-						<button class="menu__item menu__item-active">
+						<button class="menu__item menu__item--active">
 							<img src="/assets/images/water.svg" alt="Вода" />
 						</button>
 						<button class="menu__item">
@@ -31,7 +31,42 @@
 					</button>
 				</nav>
 			</div>
-			<div class="content"></div>
+			<div class="content">
+				<header>
+					<h1>Отжимания</h1>
+					<div class="progress">
+						<div class="progress__text">
+							<div class="progress__name">Прогресс</div>
+							<div class="progress__percent">80%</div>
+						</div>
+						<div class="progress__bar">
+							<div class="progress__cover-bar"></div>
+						</div>
+					</div>
+				</header>
+				<main>
+					<div>
+						<div class="habbit">
+							<div class="habbit__day">День 1</div>
+							<div class="habbit__comment">Первый подход всегда даётся тяжело</div>
+							<button class="habbit__delete">
+								<img src="/assets/images/delete.svg" alt="Удалить день">
+							</button>
+						</div>
+						<div class="habbit">
+							<div class="habbit__day">День 2</div>
+							<form class="habbit__form">
+								<input class="input__icon-mod" type="text" placeholder="Комментарий">
+								<img class="input__icon" src="/assets/images/comment.svg" alt="Иконка комментария">
+								<button class="habbit__comment-submit">
+									Готово
+								</button>
+							</form>
+							
+						</div>
+					</div>
+				</main>
+			</div>
 		</main>
 		<script src="/scripts/app.js"></script>
 	</body>
