--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
 				</main>
 			</div>
 		</main>
-		<script src="/scripts/app.js"></script>
+		<script src="/scripts/app.js"/>
 	</body>
 </html>
