--- a/index.html
+++ b/index.html
@@ -18,18 +18,12 @@
 			<div class="panel">
 				<img class="logo" src="/assets/images/fluorite.svg" alt="Fluorite" />
 				<nav class="menu">
-					<div class="menu__list">
-						<button class="menu__item menu__item--active">
-							<img src="/assets/images/water.svg" alt="Вода" />
-						</button>
-						<button class="menu__item">
-							<img src="/assets/images/food.svg" alt="Еда" />
-						</button>
-					</div>
+					<div class="menu__list"></div>
 					<button class="menu__add">
 						<img src="/assets/images/add.svg" alt="Добавить" />
 					</button>
 				</nav>
+				
 			</div>
 			<div class="content">
 				<header>
