--- a/index.html
+++ b/index.html
@@ -45,13 +45,38 @@
 							<form class="habbit__form" onsubmit="addDay(event)">
 								<input name="comment" class="input__icon-mod" type="text" placeholder="Комментарий">
 								<img class="input__icon" src="/assets/images/comment.svg" alt="Иконка комментария">
-								<button class="habbit__comment-submit" type="submit">
+								<button class="habbit__btn-submit" type="submit">
 									Готово
 								</button>
 							</form>
 							
 						</div>
 				</main>
+			</div>
+			<div class="cover cover--hidden">
+				<div class="popup">
+					<h2 class="popup__title">Новая привычка</h2>
+					<div class="icon__lable">Иконка</div>
+					<div class="icon__select">
+						<button class="icon">
+							<img src="/assets/images/sport.svg" alt="спорт">
+						</button>
+						<button class="icon icon--active">
+							<img src="/assets/images/food.svg" alt="еда">
+						</button>
+						<button class="icon">
+							<img src="/assets/images/water.svg" alt="вода">
+						</button>
+					</div>
+					<form class="popup__form">
+						<input name="title" type="text" placeholder="Название">
+						<input name="target" type="number" placeholder="Цель">
+						<button class="habbit__btn-submit" type="submit">Добавить</button>
+					</form>
+					<button class="popup__close">
+						<img src="/assets/images/close.svg" alt="Закрыть">
+					</button>
+				</div>
 			</div>
 		</main>
 		<script src="/scripts/app.js"/>
