--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<img class="logo" src="/assets/images/fluorite.svg" alt="Fluorite" />
 				<nav class="menu">
 					<div class="menu__list"></div>
-					<button class="menu__add">
+					<button class="menu__add" onclick="togglePopup()">
 						<img src="/assets/images/add.svg" alt="Добавить" />
 					</button>
 				</nav>
@@ -73,7 +73,7 @@
 						<input name="target" type="number" placeholder="Цель">
 						<button class="habbit__btn-submit" type="submit">Добавить</button>
 					</form>
-					<button class="popup__close">
+					<button class="popup__close" onclick="togglePopup()">
 						<img src="/assets/images/close.svg" alt="Закрыть">
 					</button>
 				</div>
